--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,11 @@
           name="pass1"
         />
       </div>
+      <p>
+        Create an account ?<a href="/login" style="text-decoration: none">
+          Sign in</a
+        >
+      </p>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
